# cnegative

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  install.md  issues.txt  patches.md
.github/workflows/: ci.yml  release-assets.yml
cmake/: CheckFileLines.cmake  MemoryRuntimeTests.cmake  SmokeTests.cmake
cnegative-gfxlab/: README.md  x11_demo.cneg
docs/: error-messages.md  how-to-run-and-build.md  llvm-ir.md  project-rules.md  roadmap.md  spec.md  typed-ir.md
examples/: hidden.cneg  invalid_addr_const.cneg  invalid_addr_immutable.cneg  invalid_addr_target.cneg  invalid_assignment_target.cneg  invalid_const_cycle.cneg  invalid_const_runtime.cneg  invalid_deref_non_ptr.cneg  invalid_free_result.cneg  invalid_free_slice.cneg  invalid_if_expr_branch_type.cneg  invalid_if_expr_int_condition.cneg  invalid_if_expr_void.cneg  invalid_if_int_condition.cneg  invalid_implicit_return.cneg  invalid_missing_semicolon.cneg  invalid_parse_recovery.cneg  invalid_private_import_type.cneg  invalid_ptr_missing_inner.cneg  invalid_public_private_type.cneg  invalid_result_guard_reassign.cneg  invalid_result_missing_inner.cneg  invalid_result_value_guard.cneg  invalid_struct_missing_field.cneg  invalid_try_non_result.cneg  invalid_u8_range.cneg  invalid_unimported_type.cneg  invalid_zalloc_outside_zone.cneg  invalid_zone_call_arg.cneg  invalid_zone_escape_assign.cneg  invalid_zone_free.cneg  invalid_zone_return.cneg  invalid_zone_struct_return.cneg  math.cneg  numbers.cneg  shapes.cneg  valid_basic.cneg  valid_consts_strings.cneg  valid_defer.cneg  valid_defer_loop.cneg  (+40 more)
examples/array_repeat/: config.cneg  main.cneg
examples/module_roots/: main.cneg  missing_main.cneg
examples/module_roots/feature/: helper.cneg  logic.cneg  missing.cneg
examples/module_roots/math/: core.cneg
examples/module_roots/shared/: helper.cneg
examples/result_alias/: helper.cneg  main.cneg
include/cnegative/: asm_scan.h  ast.h  backend.h  common.h  diagnostics.h  ir.h  lexer.h  llvm_runtime.h  memory.h  native_runtime.h  parser.h  project.h  sema.h  source.h  token.h
scripts/: check-file-lines.sh
src/asm/: README.md  scan_fallback.c  x86_64_scan.S
src/backend/: llvm_runtime.c  llvm_text.c  native_runtime.c  toolchain.c
src/backend/stdlib/: bytes.c  core.c  env.c  fs.c  io.c  ipc.c  lines.c  math.c  net.c  parse.c  path.c  process.c  strings.c  term.c  text.c  time.c  x11.c
src/cli/: main.c
src/ir/: ir.c  lower.c  optimize.c
src/lex/: lexer.c  token.c
src/parse/: ast.c  parser.c
src/sema/: typecheck.c
src/support/: diagnostics.c  memory.c  project.c  source.c
tests/: memory_runtime_cases.c  net_integration.py  smoke.sh
